Personal Org - 6-27/src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Business Development</fullName>
        <description>Business Development</description>
        <isActive>true</isActive>
        <values>
            <fullName>Awaiting Payment</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Proofs</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Quote</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Customer Order</fullName>
        <description>Customer Order (only one Stage-Closed Won)</description>
        <isActive>true</isActive>
        <values>
            <fullName>Cancel</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Negotiation</fullName>
        </values>
        <values>
            <fullName>Processing</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Default</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Cancel</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Negotiation</fullName>
        </values>
        <values>
            <fullName>Processing</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Inside Sales%2FField Sales</fullName>
        <description>Inside Sales/Field Sales (to include Oppt Stages)</description>
        <isActive>true</isActive>
        <values>
            <fullName>Approved Prebook</fullName>
        </values>
        <values>
            <fullName>Cancel</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Negotiation</fullName>
        </values>
        <values>
            <fullName>Pending Prebook</fullName>
        </values>
        <values>
            <fullName>Processing</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Quote Created</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Sample Order</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Cancel</fullName>
        </values>
        <values>
            <fullName>New</fullName>
        </values>
        <values>
            <fullName>Sample Order Created</fullName>
        </values>
        <values>
            <fullName>Sample Order Requested</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_Form_Received_Date__c</fullName>
        <label>Account Form Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Form_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Form Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Order_Ready__c</fullName>
        <formula>Account.Order_Ready__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Order Ready</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_on_Hold__c</fullName>
        <formula>Account.MarketingHold__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account on Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>Today() - DateValue(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Artwork_Received_Date__c</fullName>
        <label>Artwork Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Artwork_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Artwork Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bill_To_Address__c</fullName>
        <formula>Account.BillingStreet + BR()+
Account.BillingCity &amp; &quot; , &quot; &amp; Account.BillingState &amp; &quot; , &quot; &amp; Account.BillingPostalCode + BR()+
Account.BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill To Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Type__c</fullName>
        <label>Billing Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Consignee</fullName>
                </value>
                <value>
                    <fullName>Fedex Collect</fullName>
                </value>
                <value>
                    <fullName>Fedex Prepaid</fullName>
                </value>
                <value>
                    <fullName>Fedex Recipient</fullName>
                </value>
                <value>
                    <fullName>Shipper</fullName>
                </value>
                <value>
                    <fullName>Third Party</fullName>
                </value>
                <value>
                    <fullName>UPS Consignee</fullName>
                </value>
                <value>
                    <fullName>UPS Cost And Freight</fullName>
                </value>
                <value>
                    <fullName>UPS Delivery Duty Paid</fullName>
                </value>
                <value>
                    <fullName>UPS Freight Collect</fullName>
                </value>
                <value>
                    <fullName>UPS Free On Board</fullName>
                </value>
                <value>
                    <fullName>UPS Prepaid</fullName>
                </value>
                <value>
                    <fullName>UPS Shipping Duty And Tax</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bulk_Invoice_Sent__c</fullName>
        <label>Bulk Invoice Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bulk_Order_Created_Date__c</fullName>
        <label>Bulk Order Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bulk_Order_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bulk Order Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bulk_Order_Date__c</fullName>
        <label>Bulk Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bulk_Order_Number__c</fullName>
        <label>Bulk Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bulk_Payment_Captured_Date__c</fullName>
        <label>Bulk Payment Captured Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bulk_Payment_Captured__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bulk Payment Captured</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bulk_Shipping_Confirmation_Sent__c</fullName>
        <label>Bulk Shipping Confirmation Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Chase_Profile_Id__c</fullName>
        <label>Chase Profile Id</label>
        <length>22</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closed_In_Current_Year__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Closed In Current Year</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Closed_Lost_Reason__c</fullName>
        <label>Closed Lost Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Product Availability</fullName>
                </value>
                <value>
                    <fullName>Timeline</fullName>
                </value>
                <value>
                    <fullName>Pricing</fullName>
                </value>
                <value>
                    <fullName>Different Direction</fullName>
                </value>
                <value>
                    <fullName>No Response</fullName>
                </value>
                <value>
                    <fullName>Duplicate Opportunity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.AccountId</field>
                <operation>equals</operation>
                <valueField>Contact.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cooler_Payment_Received_Date__c</fullName>
        <label>Cooler Payment Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cooler_Payment_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cooler Payment Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Count_Opportunity_Products__c</fullName>
        <description>Rollup summary count of all opportunity products associated with opportunity</description>
        <inlineHelpText>Rollup summary count of all opportunity products associated with opportunity</inlineHelpText>
        <label>Count Opportunity Products</label>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Credit_Card_CSC_Id__c</fullName>
        <label>Credit Card CSC Id</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Expiration_Date__c</fullName>
        <formula>TEXT(Account.Credit_Card_Expiration_Month__c) &amp; &quot; / &quot; &amp;  TEXT(Account.Credit_Card_Expiration_Year__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit Card Expiration Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Expiration_Month__c</fullName>
        <label>Credit Card Expiration Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
                <value>
                    <fullName>08</fullName>
                </value>
                <value>
                    <fullName>09</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credit_Card_Expiration_Year__c</fullName>
        <label>Credit Card Expiration Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
                <value>
                    <fullName>2022</fullName>
                </value>
                <value>
                    <fullName>2023</fullName>
                </value>
                <value>
                    <fullName>2024</fullName>
                </value>
                <value>
                    <fullName>2025</fullName>
                </value>
                <value>
                    <fullName>2026</fullName>
                </value>
                <value>
                    <fullName>2027</fullName>
                </value>
                <value>
                    <fullName>2028</fullName>
                </value>
                <value>
                    <fullName>2029</fullName>
                </value>
                <value>
                    <fullName>2030</fullName>
                </value>
                <value>
                    <fullName>2031</fullName>
                </value>
                <value>
                    <fullName>2032</fullName>
                </value>
                <value>
                    <fullName>2033</fullName>
                </value>
                <value>
                    <fullName>2034</fullName>
                </value>
                <value>
                    <fullName>2035</fullName>
                </value>
                <value>
                    <fullName>2036</fullName>
                </value>
                <value>
                    <fullName>2037</fullName>
                </value>
                <value>
                    <fullName>2038</fullName>
                </value>
                <value>
                    <fullName>2039</fullName>
                </value>
                <value>
                    <fullName>2040</fullName>
                </value>
                <value>
                    <fullName>2041</fullName>
                </value>
                <value>
                    <fullName>2042</fullName>
                </value>
                <value>
                    <fullName>2043</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credit_Card_Name__c</fullName>
        <label>Credit Card Name</label>
        <length>54</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Number__c</fullName>
        <label>Credit Card Number</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Type__c</fullName>
        <label>Credit Card Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>VISA</fullName>
                </value>
                <value>
                    <fullName>MC</fullName>
                </value>
                <value>
                    <fullName>AMEX</fullName>
                </value>
                <value>
                    <fullName>DISC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credit_Card__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Credit Card</label>
        <referenceTo>Credit_Card__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DB_Competitor__c</fullName>
        <label>DB Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Competitor A</fullName>
                </value>
                <value>
                    <fullName>Competitor B</fullName>
                </value>
                <value>
                    <fullName>Competitor C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discount_Percentage__c</fullName>
        <label>Discount Percentage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>35</fullName>
                </value>
                <value>
                    <fullName>40</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discounted_Amount2__c</fullName>
        <formula>Expected_Revenue_2__c - Expected_Revenue_2__c * CASE(Discount_Percentage__c, 
&quot;5&quot;, 0.05, 
&quot;10&quot;, 0.10, 
&quot;15&quot;, 0.15, 
&quot;20&quot;, 0.20, 
&quot;25&quot;, 0.25, 
&quot;30&quot;, 0.30, 
&quot;35&quot;, 0.35, 
&quot;40&quot;, 0.40, 
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discounted Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ENSX_EDM__OrderNumber__c</fullName>
        <label>Order Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENSX_EDM__Quote_Number__c</fullName>
        <label>Quote Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Customer__c</fullName>
        <label>End Customer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Est_Number__c</fullName>
        <label>Est. Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_Revenue_2__c</fullName>
        <label>Amount</label>
        <summarizedField>OpportunityLineItem.calcTotalPrice__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>FOB_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FOB</label>
        <referenceTo>DTX_FOB__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Final_Logo_Received_Date__c</fullName>
        <label>Final Logo Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_Logo_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Final Logo Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Forecast_Amount__c</fullName>
        <formula>Probability * Discounted_Amount2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Forecast Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoice_Sent__c</fullName>
        <label>Invoice Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LMD__c</fullName>
        <formula>LastModifiedDate</formula>
        <label>LMD</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LeadConversionRT__c</fullName>
        <label>LeadConversionRT</label>
        <length>3900</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Letter_of_Certification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Letter of Certification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location_Status__c</fullName>
        <label>Location Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Logo_Payment_Received_Date__c</fullName>
        <label>Logo Payment Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Logo_Payment_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Logo Payment Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Need_By_Date__c</fullName>
        <label>Header Need By Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__Billing_City__c</fullName>
        <label>Billing City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__Billing_Country__c</fullName>
        <label>Billing Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__Billing_Phone__c</fullName>
        <label>Billing Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__Billing_State_Province__c</fullName>
        <label>Billing State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__Billing_Street__c</fullName>
        <label>Billing Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__Billing_Zip_Postal_Code__c</fullName>
        <label>Billing Zip/Postal Code</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__DW_Abandoned_Cart_Creation_Date__c</fullName>
        <label>Abandoned Cart Creation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__DW_Abandoned_Cart_Last_Modified_Date__c</fullName>
        <label>Abandoned Cart Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__DW_ID__c</fullName>
        <externalId>true</externalId>
        <label>Commerce Cloud ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OSF_DWback__DW_Is_Abandoned_Cart__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Abandoned Cart?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__DW_Is_Removed_Products_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Removed Products List?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__DW_Recovered_Order_No__c</fullName>
        <label>Recovered Order No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__Is_Wishlist__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Wishlist?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__Order_Registration_Status__c</fullName>
        <label>Order Registration Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Registered</fullName>
                </value>
                <value>
                    <fullName>Unregistered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OSF_DWback__Order_Site__c</fullName>
        <label>Commerce Cloud Site</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__Recovered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recovered Abandoned Cart</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__Shipping_City__c</fullName>
        <label>Shipping City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__Shipping_Country__c</fullName>
        <label>Shipping Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__Shipping_Method__c</fullName>
        <label>Shipping Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__Shipping_Phone__c</fullName>
        <label>Shipping Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__Shipping_State_Province__c</fullName>
        <label>Shipping State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__Shipping_Street__c</fullName>
        <label>Shipping Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__Shipping_Zip_Postal_Code__c</fullName>
        <label>Shipping Zip/Postal Code</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__Synced_by_Unify_Commerce__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Synced by Unify Commerce</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__Wishlist_Public__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Public Wishlist?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__isCurrentAbandonedCart__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Latest Abandoned Cart</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OTSAddress1__c</fullName>
        <label>OTS Address1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OTSAddress2__c</fullName>
        <label>OTS Address2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OTSAddress3__c</fullName>
        <label>OTS Address3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OTSCity__c</fullName>
        <label>OTS City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OTSContact__c</fullName>
        <label>OTS Contact</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OTSCountry__c</fullName>
        <label>OTS Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OTSFaxNum__c</fullName>
        <label>OTS Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>OTSName__c</fullName>
        <label>OTS Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OTSPhoneNum__c</fullName>
        <label>OTS Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>OTSResaleId__c</fullName>
        <label>OTS ResaleId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OTSState__c</fullName>
        <label>OTS State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OTSZip__c</fullName>
        <label>OTS Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Order Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order_Date__c</fullName>
        <label>Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_Placed__c</fullName>
        <defaultValue>now()</defaultValue>
        <label>Order Placed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Order_Ready__c</fullName>
        <formula>Account.Order_Ready__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Ready</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order_Released_Date__c</fullName>
        <label>Order Released Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Origin__c</fullName>
        <defaultValue>&quot;Salesforce&quot;</defaultValue>
        <label>Origin</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Created_Date__c</fullName>
        <label>PO Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PO_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PO Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PO_Number__c</fullName>
        <label>PO Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Captured_Date__c</fullName>
        <label>Payment Captured Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Captured__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Payment Captured</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Planned_Production_Date__c</fullName>
        <label>Planned Production Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PrePaid_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PrePaid Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Production_Date__c</fullName>
        <label>Production Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proof_Approval_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Proof Approval Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Proof_Approved_Date__c</fullName>
        <label>Proof Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proof_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Proof Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Proof_Received_Date__c</fullName>
        <label>Proof Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proof_Sent_Date__c</fullName>
        <label>Proof Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proof_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Proof Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Proof_and_PO_sent_to_MIGS__c</fullName>
        <label>Proof and PO sent to MIGS</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Received_Logo_Date__c</fullName>
        <label>Received Logo Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Received_Logo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Received Logo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Received_Resell_Agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Received Resell Agreement</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>